apps/invidious/sig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inv-sig-helper
  labels:
    app: inv-sig-helper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inv-sig-helper
  template:
    metadata:
      labels:
        app: inv-sig-helper
    spec:
      containers:
        - name: inv-sig-helper
          image: quay.io/invidious/inv-sig-helper:latest
          command: ["--tcp", "0.0.0.0:12999"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 12999
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: inv-sig-helper
spec:
  type: ClusterIP
  selector:
    app: inv-sig-helper
  ports:
    - protocol: TCP
      port: 12999
      targetPort: 12999
